# cofferdam

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: 00-ground-rules.md  01-overview.md  02-conceptual-model.md  03-policy-file-format.md  04-decision-engine.md  05-secret-handling.md  06-host-url-handling.md  07-email-policy.md  08-logging-observability.md  09-public-api.md  10-cli.md  11-frappe-integration.md  12-validation.md  13-testing.md  14-acceptance-criteria.md  15-open-questions.md  README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-python-library-not-frappe-app.md  0003-package-and-cli-name-cofferdam.md  0004-toml-policy-format.md  0005-fail-closed-by-default.md  0006-pydantic-v2-schema-validation.md  0007-env-var-credentials.md  0008-httpx-optional-http-helper.md  0009-structured-host-matching.md  0010-frappe-isolation.md  0011-frappe-app-first-release.md  0012-remove-cofferdam-frappe-module.md  README.md
examples/: environment_policy.staging.toml
src/cofferdam/: __init__.py  cli.py  config.py  credentials.py  decisions.py  errors.py  frappe.py  http.py  mail.py  models.py  validators.py
tests/: conftest.py  test_cli.py  test_config.py  test_credentials.py  test_decisions.py  test_http.py  test_mail.py
