[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cofferdam"
version = "0.0.0"
description = "Hold back Production outbound side effects from flooding non-Production Frappe/ERPNext environments after a database restore."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Brian Pond", email = "brian@datahenge.com" }]
maintainers = [{ name = "Brian Pond", email = "brian@datahenge.com" }]
keywords = [
    "frappe",
    "erpnext",
    "devops",
    "policy",
    "outbound",
    "safety",
    "staging",
    "sandbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
# Policy-checked HTTP helper (cofferdam.http). Kept optional so the core
# decision engine has no network-client dependency. See ADR-0008.
http = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "httpx>=0.27",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/datahenge/cofferdam"
Documentation = "https://github.com/datahenge/cofferdam/tree/main/docs"
Repository = "https://github.com/datahenge/cofferdam"
Changelog = "https://github.com/datahenge/cofferdam/blob/main/CHANGELOG.md"
Issues = "https://github.com/datahenge/cofferdam/issues"

[project.scripts]
cofferdam = "cofferdam.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cofferdam"]

[tool.hatch.build.targets.sdist]
include = ["src/cofferdam", "docs", "tests", "CHANGELOG.md", "README.md", "LICENSE"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/cofferdam"]

# tomli is only installed on Python < 3.11; ignore its absence when type-checking
# on a newer interpreter (config.py falls back to stdlib tomllib at runtime).
[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N", "RUF"]
# S101 (assert) is fine in tests; enforced elsewhere.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.coverage.run]
branch = true
source = ["cofferdam"]
